parslers-benchmark/src/tests/invalid/syntaxErr/while/donoErr.wacc
# done typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  while false do
    skip
  dono
end
